--- a/src/components/menu-item/menu-item.style.scss
+++ b/src/components/menu-item/menu-item.style.scss
@@ -21,14 +21,14 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
-  overflow: hidden;
+  overflow: hidden; //makes the image on hover when zooming to stay inside of its container
 
   &:hover {
     cursor: pointer;
 
     & .background-image {
       transform: scale(1.1);
-      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95); //zooms in pictures in
     }
 
     & .content {
