--- a/src/components/checkout-item/checkout-item.style.scss
+++ b/src/components/checkout-item/checkout-item.style.scss
@@ -23,7 +23,14 @@
   }
 
   .quantity {
-    padding-left: 20px;
+    display: flex;
+    .arrow {
+      cursor: pointer;
+      font-size: larger;
+    }
+    .value {
+      margin: auto 10px;
+    }
   }
 
   .remove-button {
