--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -15,6 +15,24 @@
   display: flex;
   justify-content: center;
 
+  @media only screen and (max-width: 790px) {
+    height: 40px;
+    letter-spacing: 0.5px;
+    line-height: 20px;
+    padding: 0 25px 0 25px;
+    font-size: 12px;
+    background-color: black;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bolder;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
   &:hover {
     background-color: white;
     color: black;
