--- a/src/components/sign-in/sign-in.scss
+++ b/src/components/sign-in/sign-in.scss
@@ -1,5 +1,5 @@
 .sign-in {
-  width: 31vw;
+  width: 40vw;
   display: flex;
   flex-direction: column;
 
@@ -10,5 +10,15 @@
   .buttons {
     display: flex;
     justify-content: space-between;
+
+    @media only screen and (max-width: 400px) {
+      justify-content: space-around;
+    }
+  }
+
+  @media only screen and (max-width: 790px) {
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
   }
 }
