--- a/src/components/sign-up/sign-up.scss
+++ b/src/components/sign-up/sign-up.scss
@@ -6,4 +6,9 @@
   .title {
     margin: 10px 0;
   }
+  @media only screen and (max-width: 790px) {
+    width: 80vw;
+    display: flex;
+    flex-direction: column;
+  }
 }
