--- a/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.scss
+++ b/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.scss
@@ -3,4 +3,11 @@
   display: flex;
   justify-content: space-around;
   margin: 30px auto;
+
+  @media only screen and (max-width: 790px) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
