--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -61,6 +61,10 @@
     justify-content: space-between;
     font-size: 18px;
 
+    @media screen and (max-width: 400px) {
+      font-size: 12px;
+    }
+
     .name {
       width: 79%;
       margin-bottom: 15px;
