--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -18,8 +18,8 @@
   @media only screen and (max-width: 790px) {
     height: 40px;
     letter-spacing: 0.5px;
-    line-height: 20px;
-    padding: 0 25px 0 25px;
+    line-height: 15px;
+    padding: 15px;
     font-size: 12px;
     background-color: black;
     color: white;
@@ -28,7 +28,6 @@
     border: none;
     cursor: pointer;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
