--- a/src/components/checkout-item/checkout-item.style.scss
+++ b/src/components/checkout-item/checkout-item.style.scss
@@ -7,9 +7,20 @@
   font-size: 20px;
   align-items: center;
 
+  @media screen and (max-width: 769px) {
+    flex-direction: column;
+    align-items: center;
+    margin: 10px auto;
+  }
+
   .image-container {
-    width: 23%;
+    width: 30%;
     padding-right: 15px;
+
+    @media screen and (max-width: 769px) {
+      width: 70%;
+      padding-right: unset;
+    }
 
     img {
       width: 100%;
@@ -36,5 +47,18 @@
   .remove-button {
     padding-left: 12px;
     cursor: pointer;
+  }
+}
+
+.checkoutButtons {
+  margin: 10px 0px 0px 0px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  @media screen and (max-width: 600px) {
+    margin: 10px 0px 0px 0px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
   }
 }
