--- a/src/components/custom-button/custom-button.scss
+++ b/src/components/custom-button/custom-button.scss
@@ -16,7 +16,7 @@
   justify-content: center;
 
   @media only screen and (max-width: 790px) {
-    height: 40px;
+    height: 50px;
     letter-spacing: 0.5px;
     line-height: 15px;
     padding: 15px;
@@ -52,6 +52,14 @@
     background-color: white;
     color: black;
     border: 1px solid black;
+    height: 50px;
+    letter-spacing: 0.5px;
+    line-height: 15px;
+    padding: 15px;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &:hover {
       background-color: black;
