--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,25 +1,32 @@
 .header {
-  height: 70px;
+  height: 90px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 25px;
+  justify-content: space-around;
+  margin-bottom: 35px;
+  border-bottom: 1px solid darkgrey;
 
   .logo-container {
     height: 100%;
     width: 70%;
-    padding: 25px;
+    padding: 15px;
+    @media screen and (max-width: 600px) {
+      width: 30%;
+    }
   }
 
   .options {
-    width: 50%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-around;
+
+    @media screen and (max-width: 600px) {
+    }
 
     .option {
-      padding: 10px 15px;
+      padding: 10px 1rem;
       cursor: pointer;
     }
   }
