--- a/src/pages/collection/collection.style.scss
+++ b/src/pages/collection/collection.style.scss
@@ -1,6 +1,7 @@
 .collection-page {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   .title {
     font-size: 38px;
@@ -14,6 +15,13 @@
 
     &.collection-item {
       margin-bottom: 30px;
+    }
+
+    @media only screen and (max-width: 900px) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media only screen and (max-width: 600px) {
+      grid-template-columns: 1fr 1fr;
     }
   }
 }
